# School21

./: .markdownlint.json  README.md
C/: README.md
C/C4_s21_math/: README.md  README_RUS.md
C/C5_s21_decimal/: README.md  README_RUS.md
C/C6_s21_matrix/: README.md  README_RUS.md
C/C7_SmartCalc_v1.0/: README_RUS.md
C/C8_3DViewer_v1.0/: README.md
C2_s21_stringplus/src/: s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memmove.c  s21_strchr.c  s21_strcspn.c  s21_string.h  s21_string_test.c  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_trim.c
C4_s21_math/src/: Makefile  s21_asin.c  s21_fmod.c  s21_log.c  s21_math.h  s21_tan.c  unit_test.c
C5_s21_decimal/src/: Makefile  s21_decimal.h  s21_test.c
C6_s21_matrix/src/: s21_matrix.c  s21_matrix.h
CPP/CPP1_s21_matrixplus/: README.md
CPP/CPP2_s21_containers/: README.md
CPP/CPP3_SmartCalc_v2.0/: README.md
CPP/CPP5_3DViewer_v2.1/: README.md  README_RUS.md
CPP/CPP6_3DViewer_v2.2/src/3DViewer/Unit-tests/: CMakeLists.txt
CareerTrack/: README.md
CareerTrack/CT00-1/: README.md
CareerTrack/CT01-1/: README.md  README_RUS.md
CareerTrack/CT02-1/: README_RUS.md
CareerTrack/CT03-1/: README.md
CareerTrack/CT04/: README_RUS.md
CareerTrack/CT06-1/: README.md
CareerTrack/CT07-1/: README.md  README_RUS.md
CareerTrack/CT08-1/: README.md
Cpp/CPP3_SmartCalc_v2.0/: README.md
DevOps/: README.md
Python/: README.md
SQL/: README.md
SurvivalPool/: README.md
project_clusters/: README.md
survival-camp/: README.md
(+1176 files in other folders)
